# physics_math_code_explorer

./: .gitignore  backend.dockerfile  docker-compose.yml  index.html  manticore.py  pyproject.toml  scraper.py
backend/: _logger.py  main.py
backend/api/: __init__.py
backend/api/endpoints/: search.py
backend/manticore_utils/: __init__.py  config.py  fill.py  init_db.py  init_tables.py  search.py
backend/pydantic_models/: search.py
frontend/pmc/: README.md  package-lock.json  package.json
frontend/pmc/src/: App.vue
frontend/pmc/src/components/: search.vue  telegram_message.vue
frontend/pmc/src/router/: index.js
