[tool.poetry]
name = "physics-math-codee"
version = "0.1.0"
description = ""
authors = ["elishakravchuk <elisey.kravchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.34.0"
manticoresearch = "^4.0.0"
fastapi = {extras = ["all"], version = "^0.110.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
